// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render the input component 1`] = `
<div>
  <input
    class="input input-bordered"
  />
</div>
`;

exports[`Input should render the input component with props 1`] = `
<div>
  <input
    class="input input-bordered"
    placeholder="input"
    type="text"
    value="input"
  />
</div>
`;
